# 26-filebox

./: .gitignore  README.md
client/: client.sh
client/code/: CMakeLists.txt  FileBox.pro  clientInstall.sh
client/code/forms/: filebox.ui  login.ui  register.ui
client/code/headers/: filebox.h  filesystemtreeview.h  login.h  register.h  serverfilesbrowser.h  tcpclient.h
client/code/src/: filebox.cpp  filesystemtreeview.cpp  login.cpp  main.cpp  register.cpp  serverfilesbrowser.cpp  tcpclient.cpp
client/resources/images/: images.qrc
code/: FileBox.pro
code/forms/: filebox.ui  login.ui  register.ui
code/headers/: filebox.h  filesystemtreeview.h  login.h  register.h  tcprunnable.h  tcpserver.h
code/src/: filebox.cpp  filesystemtreeview.cpp  login.cpp  main.cpp  register.cpp  tcpserver.cpp
server/: .clang-format  CMakeLists.txt  server.sh
server/code/: CMakeLists.txt  TCPServer.pro
server/code/Bozidar Mitrovic CMAKE/: CMakeLists.txt
server/code/headers/: clientworker.h  tcpconnection.h  tcprunnable.h  tcpserver.h
server/code/src/: clientworker.cpp  main.cpp  tcpconnection.cpp  tcprunnable.cpp  tcpserver.cpp
server/users/: users.txt
server/users/admin/test1/: 1.txt
server/users/admin/test2/: LukaVoliLuka.txt
